Achicar mensaje de android app en navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,7 +31,7 @@
         {% endif %}
     </ul>
     <ul class="nav pull-right">
-        <li><a href="http://bit.ly/HfmNTT"><i class="android-icon" style="background:url({{ STATIC_URL }}img/android-icon-16x16.png);"></i> Bajate la App para Android <span class="label label-info">Nuevo!</span></a></li>
+        <li><a href="http://bit.ly/HfmNTT"><i class="android-icon" style="background:url({{ STATIC_URL }}img/android-icon-16x16.png);"></i> Cualbondi en Android <span class="label label-info">Nuevo!</span></a></li>
         <li><a href="https://spreadsheets.google.com/spreadsheet/viewform?formkey=dFJERlREQjUyaE1iSkFDYnhOa2Nnbmc6MQ+"><i class="icon-pencil icon-white"></i> Ayudanos completando la encuesta</a></li>
     </ul>
 </div>
