--- a/templates/core/ver_recorrido.html
+++ b/templates/core/ver_recorrido.html
@@ -27,7 +27,7 @@
 
     <div class="thumbnail">
         <div id="map" style="background:lightblue;">
-            <img src="/{{ recorrido_actual.img_panorama.url }}" alt="Mapa del recorrido {{ recorrido_actual.nombre }} de la línea {{ recorrido_actual.linea.nombre }}." />
+            <img src="/{{ recorrido_actual.img_panorama.url }}" alt="Mapa del recorrido {{ recorrido_actual.nombre }} de la línea {{ linea_actual.nombre }} en la ciudad de {{ ciudad_actual.nombre }}." />
         </div>
     </div>
     <br />
