--- a/templates/core/ver_obj_map.html
+++ b/templates/core/ver_obj_map.html
@@ -3,18 +3,141 @@
     <head>
         <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
         <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
+        <script>
+            // http://makinacorpus.github.io/Leaflet.TextPath/leaflet.textpath.js
+            // plugin leaflet para las flechitas en la polilinea.
+            /*
+             * Inspired by Tom Mac Wright article :
+             * http://mapbox.com/osmdev/2012/11/20/getting-serious-about-svg/
+             */
+
+            (function () {
+
+            var __onAdd = L.Polyline.prototype.onAdd,
+                __onRemove = L.Polyline.prototype.onRemove,
+                __updatePath = L.Polyline.prototype._updatePath,
+                __bringToFront = L.Polyline.prototype.bringToFront;
+
+
+            var PolylineTextPath = {
+
+                onAdd: function (map) {
+                    __onAdd.call(this, map);
+                    this._textRedraw();
+                },
+
+                onRemove: function (map) {
+                    map = map || this._map;
+                    if (map && this._textNode)
+                        map._pathRoot.removeChild(this._textNode);
+                    __onRemove.call(this, map);
+                },
+
+                bringToFront: function () {
+                    __bringToFront.call(this);
+                    this._textRedraw();
+                },
+
+                _updatePath: function () {
+                    __updatePath.call(this);
+                    this._textRedraw();
+                },
+
+                _textRedraw: function () {
+                    var text = this._text,
+                        options = this._textOptions;
+                    if (text) {
+                        this.setText(null).setText(text, options);
+                    }
+                },
+
+                setText: function (text, options) {
+                    this._text = text;
+                    this._textOptions = options;
+
+                    var defaults = {repeat: false, fillColor: 'black', attributes: {}};
+                    options = L.Util.extend(defaults, options);
+
+                    /* If empty text, hide */
+                    if (!text) {
+                        if (this._textNode)
+                            this._map._pathRoot.removeChild(this._textNode);
+                        return this;
+                    }
+
+                    text = text.replace(/ /g, '\u00A0');  // Non breakable spaces
+                    var id = 'pathdef-' + L.Util.stamp(this);
+                    var svg = this._map._pathRoot;
+                    this._path.setAttribute('id', id);
+
+                    if (options.repeat) {
+                        /* Compute single pattern length */
+                        var pattern = L.Path.prototype._createElement('text');
+                        for (var attr in options.attributes)
+                            pattern.setAttribute(attr, options.attributes[attr]);
+                        pattern.appendChild(document.createTextNode(text));
+                        svg.appendChild(pattern);
+                        var alength = pattern.getComputedTextLength();
+                        svg.removeChild(pattern);
+
+                        /* Create string as long as path */
+                        text = new Array(Math.ceil(this._path.getTotalLength() / alength)).join(text);
+                    }
+
+                    /* Put it along the path using textPath */
+                    var textNode = L.Path.prototype._createElement('text'),
+                        textPath = L.Path.prototype._createElement('textPath');
+
+                    var dy = options.offset || this._path.getAttribute('stroke-width');
+
+                    textPath.setAttributeNS("http://www.w3.org/1999/xlink", "xlink:href", '#'+id);
+                    textNode.setAttribute('dy', dy);
+                    for (var attr in options.attributes)
+                        textNode.setAttribute(attr, options.attributes[attr]);
+                    textPath.appendChild(document.createTextNode(text));
+                    textNode.appendChild(textPath);
+                    svg.appendChild(textNode);
+                    this._textNode = textNode;
+                    return this;
+                }
+            };
+
+            L.Polyline.include(PolylineTextPath);
+
+            L.LayerGroup.include({
+                setText: function(text, options) {
+                    for (var layer in this._layers) {
+                        if (typeof this._layers[layer].setText === 'function') {
+                            this._layers[layer].setText(text, options);
+                        }
+                    }
+                    return this;
+                }
+            });
+
+            })();
+        </script>
+
     </head>
     <body style="height:100%;width:100%;margin:0;padding:0">
         <div id="map" style="background:lightblue; height:100%; width:100%"></div>
-        <script type="text/javascript">
+        <script>
             map = new L.Map('map', { zoomControl:false });
             {% if obj.poligono %}
-            map.fitBounds(L.geoJson({{ obj.poligono.geojson|safe }}));
+            var geojson = L.geoJson({{ obj.envolvente.geojson|safe }});
+            var geojsonc = L.geoJson({{ obj.poligono.geojson|safe }});
             {% elif obj.ruta %}
-            map.fitBounds(L.geoJson({{ obj.ruta.geojson|safe }}));
+            var points = []
+            eval({{ obj.ruta.geojson|safe }}).coordinates.forEach(function(e,i,a){
+                points.push([e[1],e[0]])
+            })
+            var geojson = new L.polyline(points, {opacity:1})
+            var geojsonc = geojson;
             {% else %}
-            map.fitBounds(L.geoJson({{ obj.envolvente.geojson|safe }}));
+            var geojson = L.geoJson({{ obj.envolvente.geojson|safe }});
+            var geojsonc = geojson;
             {% endif %}
+            map.fitBounds(geojsonc);
             var osmUrl='http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png?pepe=asd';
             var osmAttrib='&copy; Cualbondi &amp; OpenStreetMap contributors';
             var osm = new L.TileLayer(osmUrl, {maxZoom: 17, fadeAnimation: false});
@@ -22,7 +145,11 @@
             map.addLayer(osm);
 
             //map.setView(L.latLng({{ ciudad_actual.centro.get_y|stringformat:"f" }},{{ ciudad_actual.centro.get_x|stringformat:"f" }}), {{ ciudad_actual.zoom }});
-            L.geoJson({% if obj.envolvente %}{{ obj.envolvente.geojson|safe }}{% elif obj.ruta %}{{ obj.ruta.geojson|safe }}{% endif %}).addTo(map);
+            geojson.addTo(map);
+            //different arrows \u25BA \u27A1
+            {% if obj.ruta %} geojson.setText('    \u25BA    ', {repeat: true, offset: 7, attributes: {fill: 'blue', 'font-size': '22'}}){% endif %}
+            //{% if obj.ruta %} geojson.setText('    >    ', {repeat: true, offset: 9, attributes: {fill: 'blue', 'font-size': '28'}}){% endif %}
+
             // asegurarse que cargó
             osm.on('load', function(){ setTimeout( function(){alert('loaded')}, 1000)   } )
         </script>
