--- a/templates/widget/v1/busqueda.html
+++ b/templates/widget/v1/busqueda.html
@@ -1,4 +1,5 @@
-<html style="margin:0;padding:0;height:100px;width:200px">
+<!DOCTYPE html>
+<html style="margin:0;padding:0;height:100px;width:200px;overflow:hidden">
 
     <head>
 
@@ -8,9 +9,9 @@
 
         <form target="_parent" method="GET" action="/mapa/{% if ciudad %}{{ ciudad.slug }}{% else %}{{ ciudades.0.slug }}{% endif %}/" id="cb_form{% if ciudad %}_{{ ciudad.slug }}{% endif %}" style="margin:0;padding:0">
             <input type="hidden" name="key" value="{{ key }}">
-            <input type="text" name="desde" placeholder="Desde" style="width:200px">
+            <input type="text" name="desde" placeholder="Desde" style="width:195px">
             <br>
-            <input type="text" name="hasta" placeholder="Hasta" style="width:200px">
+            <input type="text" name="hasta" placeholder="Hasta" style="width:195px">
             <br>
             {% if ciudades %}
                 <select onChange='this.parentNode.action = "/mapa/"+this.value+"/"' style="width:120px;float:left">
