--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -5,7 +5,7 @@
 {% block bloque_izquierda %}
     <h3>Contáctese con Cualbondi</h3>
     <p>Envíenos su consulta y a la brevedad nos comunicaremos con usted.</p>
-    <div style="width: 500px; margin-top: 25px;">
+    <div style="margin-top: 25px;">
         <form id="contact_form" method="POST" action="{% url contacto %}"
               autocapitalize="off" class="form-horizontal">
             {% csrf_token %}
