--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -145,12 +145,14 @@
     })
 </script>
 
-<script src="http://openlayers.org/api/OpenLayers.js"></script>
 <script src="{{ STATIC_URL }}js/jquery.RC4.min.js"></script>
 <script src="{{ STATIC_URL }}js/simple-slider.min.js"></script>
 <script src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?v=3&amp;sensor=false"></script>
-<link rel="stylesheet" href="{{ STATIC_URL }}css/openlayers/style.css" type="text/css" />
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+<script src="{{ STATIC_URL }}js/wicket.js"></script>
+<script src="{{ STATIC_URL }}js/wicket-leaflet.js"></script>
 
 <script>
     var GLOBAL_ci = "{{ ciudad_actual.slug }}";
@@ -159,7 +161,7 @@
     var ciudad_actual_zoom = {{ ciudad_actual.zoom }};
     var STATIC_URL = "{{ STATIC_URL }}";
 </script>
-<script src="{{ STATIC_URL }}js/functions-2.0.js"></script>
+<script src="{{ STATIC_URL }}js/functions-3.0.js"></script>
 
        <script id="ajaxLoader" type="text/x-jquery-tmpl">
             <center>
