Usando plugin leaflet para marker + radio Funcionalidad de drag Cambiar Radio de busqueda Cambiando tabs por espacios

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -153,6 +153,7 @@
 <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 <script src="{{ STATIC_URL }}js/wicket.js"></script>
 <script src="{{ STATIC_URL }}js/wicket-leaflet.js"></script>
+<script src="{{ STATIC_URL }}js/leaflet.editableCircleMarker.js"></script>
 
 <script>
     var GLOBAL_ci = "{{ ciudad_actual.slug }}";
