Comentando el fb-like y tw-share

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -17,8 +17,8 @@
 {% endblock %}
 
 {% block content %}
-    {% include "facebook_sdk.html" %}
-    {% include "twitter_sdk.html" %}
+    {#% include "facebook_sdk.html" %#}
+    {#% include "twitter_sdk.html" %#}
     <div id="bloque_izquierda">
         <div class="tabbable">
             <ul class="nav nav-tabs">
@@ -62,7 +62,7 @@
                     <button id="button-buscarinputs" class="btn btn-primary pull-right" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
                     <div style="clear:both;"></div>
 
-                    <div style="margin-top: 15px;"
+<!--                    <div style="margin-top: 15px;"
                          class="fb-like"
                          data-href="http://facebook.com/cualbondi"
                          data-width="365"
@@ -80,7 +80,7 @@
                            data-show-count="false"
                            data-lang="es">Seguir a @cualbondi</a>
                     </div>
-
+!-->
                     <hr style="margin: 15px 0;">
 
                     <div align="center">
