Agregando app editor, moviendo ajax_login a app de usuarios

--- a/templates/editor/editor_recorrido.html
+++ b/templates/editor/editor_recorrido.html
@@ -172,7 +172,7 @@
                         $.ajax(
                             {
                                 "method": "POST",
-                                "url": "/login_ajax/facebook/",
+                                "url": "/usuarios/login_ajax/facebook/",
                                 "data": {
                                     //next: '',
                                     //process: 'authenticate',
