--- a/templates/editor/moderacion_id.html
+++ b/templates/editor/moderacion_id.html
@@ -78,7 +78,7 @@
         {% with original as e %}
         <tr>
             <td>{{ e.linea.nombre }} - {{ e.nombre }}</td>
-            <td><a href="{% url apps.core.views.moderar_ediciones_id id=e.id %}">id</a></td>
+            <td><a href="{% url apps.editor.views.moderar_ediciones_id id=e.id %}">id</a></td>
             <td><a href="">uuid</a></td>
         </tr>
         {% endwith %}
@@ -89,8 +89,8 @@
         {% for e in ediciones %}
         <tr>
             <td>{{ e.linea.nombre }} - {{ e.nombre }}</td>
-            <td><a href="{% url apps.core.views.moderar_ediciones_id id=e.recorrido.id %}">id</a></td>
-            <td><a href="{% url apps.core.views.moderar_ediciones_uuid uuid=e.uuid %}">uuid</a></td>
+            <td><a href="{% url apps.editor.views.moderar_ediciones_id id=e.recorrido.id %}">id</a></td>
+            <td><a href="{% url apps.editor.views.moderar_ediciones_uuid uuid=e.uuid %}">uuid</a></td>
         </tr>
         {% endfor %}
     </table>
