Hover en botones para ver mas info y editar en los resultados de busqueda.

--- a/apps/core/static/css/buscador.css
+++ b/apps/core/static/css/buscador.css
@@ -246,6 +246,23 @@ div.leaflet-marker-icon.markerT {
     height: 26px !important;
 }
 
+.itemResultado .itinerario {
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
 
+.itemResultado .botones {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: none;
+}
 
+.itemResultado:hover .botones {
+    display: block;
+}
 
+.itemResultado.active .botones {
+    display: block;
+}
